AM_CPPFLAGS = -Iinc -Icmp -Idmap -Ifsm -Ilib -Isys -Ietc -std=gnu99
LIBS = -lpthread -lm -lcrypto -lssl -lpcap -lrt

bin_PROGRAMS = $(top_builddir)/bin/ntrt
__top_builddir__bin_ntrt_SOURCES =       \
			  ntrt.c                    \
			  cmp/cmp_accumulator.h     \
			  cmp/cmp_accumulator.c     \
			  cmp/cmp_cmdexecutor.h     \
			  cmp/cmp_cmdexecutor.c     \
			  cmp/cmp_sniffer.h         \
			  cmp/cmp_sniffer.c         \
			  cmp/cmp_evaluator.h       \
			  cmp/cmp_evaluator.c       \
			  cmp/cmp_recorder.h        \
			  cmp/cmp_recorder.c        \
			  cmp/cmp_defs.h            \
			  cmp/cmp_defs.c            \
			  cmp/cmp_predefs.h         \
			  cmp/cmp_predefs.c         \
			  cmp/cmp_tests.c           \
			  dmap/dmap_defs.h          \
			  dmap/dmap_predefs.h       \
			  dmap/dmap_sel.h           \
			  dmap/dmap_sel.c           \
			  dmap/dmap.h               \
			  dmap/dmap.c               \
			  etc/etc_argtable2.h       \
			  etc/etc_argtable2.c       \
			  etc/etc_dict.h            \
			  etc/etc_dict.c            \
			  etc/etc_endian.h          \
			  etc/etc_endian.c          \
			  etc/etc_iniparser.h       \
			  etc/etc_iniparser.c       \
  			  etc/etc_sniffex.h         \
			  etc/etc_sniffex.c         \
			  etc/etc_utils.h           \
			  etc/etc_utils.c           \
			  fsm/fsm_actions.h         \
			  fsm/fsm_actions.c         \
			  fsm/fsm_cmpactions.h      \
			  fsm/fsm_cmpactions.c      \
			  fsm/fsm_halt.h            \
			  fsm/fsm_halt.c            \
			  fsm/fsm_run.h             \
			  fsm/fsm_run.c             \
              fsm/fsm.h                 \
              fsm/fsm.c                 \
              inc/inc_inet.h            \
              inc/inc_io.h              \
              inc/inc_io.c              \
              inc/inc_mtime.h           \
              inc/inc_mtime.c           \
              inc/inc_opcall.h          \
              inc/inc_opcall.c          \
              inc/inc_predefs.h         \
              inc/inc_socket.h          \
              inc/inc_texts.h           \
              inc/inc_unistd.h          \
              lib/lib_debuglog.h        \
              lib/lib_debuglog.c        \
              lib/lib_descs.h           \
              lib/lib_defs.h            \
              lib/lib_dispers.h         \
              lib/lib_dispers.c         \
              lib/lib_features.c        \
              lib/lib_features.h        \
              lib/lib_funcs.h           \
              lib/lib_funcs.c           \
              lib/lib_heap.h            \
              lib/lib_heap.c            \
              lib/lib_interrupting.h    \
              lib/lib_interrupting.c    \
              lib/lib_makers.h          \
              lib/lib_makers.c          \
              lib/lib_predefs.h         \
              lib/lib_predefs.c         \
              lib/lib_puffers.h         \
              lib/lib_puffers.c         \
              lib/lib_threading.h       \
              lib/lib_threading.c       \
              lib/lib_tors.h            \
              lib/lib_tors.c            \
              lib/lib_vector.h          \
              lib/lib_vector.c          \
              sys/sys_confs.h           \
              sys/sys_confs.c           \
              sys/sys_predefs.h         

